# inverted-pendulum

./: .gitignore  CLAUDE.md  PLAN.md  README.md  TODO.md  controlador-de-equilibrio.md  main.py  pyproject.toml  requirements.txt
agents/: ppo_agent.py  predict.py  trainer.py
characterization/: step_1023_100_sim.csv  step_12v_0p1s.csv
configs/: CLAUDE.md  characterization_impulse.toml  characterization_real.toml  characterization_step.toml  control_250hz.toml  control_config.toml  sim_config.toml  sim_ideal.toml  sim_to_real_validation.toml  sim_to_real_validation_3000.toml  step_1023_100_sim.toml  train_sac_noisy.toml
controllers/: pid_balance.py  pid_balance_4ms.py  pid_example.py
data/: step_12v_0p5s.csv  step_real_12v_0p5s.csv
docs/: custom-controller-tutorial.md
gui/: __main__.py  main_window.py  ring_buffer.py  workers.py
gym_envs/: CLAUDE.md  backend.py  control_config.py  observation.py  pendulum_env.py  pendulum_sim.py  policy_controller.py  sim_config.py
models/: pendulum_high_quality.xml  pendulum_low_quality.xml  pendulum_model_v3.xml
mujoco_sim/: analisis_step_100_comparacion.py  characterize_system.py  pendulum_env.py  simulation.py  trayectorias.py  visualizar_step_100.py
notebooks/: test_notebook.ipynb
scripts/: gui_monitor.py  max_voltage_test.py  random_episode_test.py  train.py  validate_controller.py
src/: main.py  prueba_mujoco.py  simulation.py
test/: max_voltage_test.py  random_episode_test.py  test_control_config.py  test_env_smoke.py  test_pendulum_sim.py  test_pid_balance.py  test_policy_controller.py
(+13 files in other folders)
