[project]
name = "inverted-pendulum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "control>=0.10.2",
    "gymnasium>=1.2.3",
    "mediapy>=1.2.5",
    "mujoco>=3.4.0",
    "mujoco-python-viewer>=0.1.4",
    "pyqtgraph>=0.13",
    "pyside6>=6.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
